<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LibraryV0.1</string>
    <string name="menu_settings">Settings</string>
    <string name="no_data">暂时没有内容</string>
    <string name="group_display">分组显示</string>
    <string name="all_display">全部显示</string>
    <string name="password_hint">请输入密码</string>
    <string name="username_hint">请输入用户名/邮箱</string>
    <string name="login">登录</string>
    <string name="no_username">请输入用户名！</string>
    <string name="no_password">请输入密码！</string>
    <string name="no_connect">当前无网络连接！</string>
    <string name="login_failed">登陆失败，请检查用户名或密码是否正确！</string>

</resources>