<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@color/head"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/bookroom_flip"
                android:layout_width="54dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:background="@drawable/v5_0_1_flipper_head_title_wrapper_background"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/v5_0_1_flipper_head_flip" />

            <ProgressBar
                android:id="@+id/bookroom_progressbar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dip"
                android:clickable="false"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/bookroom_mode_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:clickable="true" >

                <TextView
                    android:id="@+id/bookroom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="雅馨阁"
                    android:textColor="@color/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <!-- <ImageView
                android:id="@+id/bookroom_title_add"
                android:layout_width="54dip"
                android:layout_height="fill_parent"
                android:background="@drawable/v5_0_1_flipper_head_title_wrapper_background"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/v5_0_1_flipper_head_add_chat_friends" /> -->

            <ImageView
                android:id="@+id/bookroom_title_menu"
                android:layout_width="54dip"
                android:layout_height="fill_parent"
                android:background="@drawable/v5_0_1_flipper_head_title_wrapper_background"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/mm_title_btn_menu_normal" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/tab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/bookroom_tap1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/group_display"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookroom_tap2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/all_display"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tab"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:orientation="horizontal"
                android:weightSum="2" >

                <ImageView
                    android:id="@+id/bookroom_tap"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/trans_bar" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/trans_bar"
                    android:visibility="invisible" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/bookroom_tabpager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!--
<ListView 
    android:id="@+id/bookroom_list_group1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:cacheColorHint="#00000000"
    android:listSelector="#00000000"
    android:fastScrollEnabled="true"
    android:layout_weight="1"
    
  > 

</ListView>        -->

        <RelativeLayout
            android:id="@+id/bookroom_nodisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/bookroom_nodisplay_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/nodata_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bookroom_nodisplay_img"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dip"
                android:text="@string/no_data"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>